--- a/greeting.html
+++ b/greeting.html
@@ -35,7 +35,7 @@
         </ul>
       </div>
       <div class="greeting-content">
-        <h1><i>Ceo Greeting</i></h1>
+        <h1><i>CEO Greeting</i></h1>
         <br /><br />
         <table>
           <tr>
